[package]
name = "browser_ball"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"

# WASM-only: pin wasm-bindgen to the exact version Bevy already locks,
# so Trunk's wasm-bindgen-cli matches the bindings our build generates.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.122"

# Build our own code lightly but dependencies fully optimized, so dev
# rebuilds stay fast while Bevy itself (the slow part) runs at full speed.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
