[package]
name = "basketball_ship"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"

# WASM-only bridge to the HTML control panel (name field, results dropdown, reset
# button, shot-limit toggle). Pinned to the version Bevy already locks so Trunk's
# wasm-bindgen-cli matches the generated bindings.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.122"

# Build our own code lightly but dependencies fully optimized, so dev
# rebuilds stay fast while Bevy itself (the slow part) still runs at full speed.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release profile tuned for small WASM bundles shipped to the browser.
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
